// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Button component should render Button 1`] = `
<button
  class="Button Button--has-variant-contained Button--has-bg-primary"
  color="primary"
  id="Button-«r0»"
  title="Test title"
>
  <span
    aria-labelledby="Button-«r0»"
    class="Button__title"
  >
    Test title
  </span>
</button>
`;

exports[`The Button component should render disabled Button 1`] = `
<button
  class="Button Button--has-variant-contained Button--has-bg-primary Button--is-disabled"
  color="primary"
  disabled=""
  id="Button-«r1»"
  tabindex="-1"
  title="Test title"
>
  <span
    aria-labelledby="Button-«r1»"
    class="Button__title"
  >
    Test title
  </span>
</button>
`;

exports[`The Button component should render loading Button 1`] = `
<button
  class="Button Button--has-variant-contained Button--has-bg-primary"
  color="primary"
  disabled=""
  id="Button-«r2»"
  title="Test title"
>
  <div
    class="Loading"
    style="display: flex; align-items: center; justify-content: center; gap: 16px;"
  >
    <svg
      height="0"
      style="position: absolute;"
      width="0"
    >
      <defs>
        <lineargradient
          class="Loading__gradient"
          id="loading-gradient"
          x1="0%"
          x2="0%"
          y1="0%"
          y2="100%"
        >
          <stop
            offset="0%"
          />
          <stop
            offset="50%"
          />
          <stop
            offset="100%"
          />
        </lineargradient>
      </defs>
    </svg>
    <div
      class="Loading__animation Loading__animation--size-xs"
      style="border-radius: 50%; border: 4px solid transparent; border-top: 4px solid; animation: spin 1s linear infinite;"
    />
  </div>
</button>
`;
